# browin_006_log_reg

./: pyproject.toml
first/: db_schema.sql  flask_database.py  flaskapp.db  flaskapp.py  password.py  user_login.py
first/templates/: base.html  login.html  profile.html  register.html
tests/: test_first.py
