[tool.poetry]
name = "first"
version = "0.1.0"
description = ""
authors = ["Roman Browin <roman.browin@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
Flask-Admin = "^1.5.8"
Flask-Login = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
